--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,75 +9,116 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/colorPrimary">
 
         <EditText
             android:id="@+id/rollnumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="35dp"
             android:ems="10"
-            android:inputType="number"
-            android:hint="@string/rollnumber"/>
+            android:hint="@string/rollnumber"
+            android:importantForAutofill="no"
+            android:inputType="number" />
 
         <EditText
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Name" />
+            android:hint="@string/name"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/mobilenumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
             android:ems="10"
-            android:inputType="phone"
-            android:hint="Mobile number"/>
+            android:hint="@string/phone"
+            android:importantForAutofill="no"
+            android:inputType="phone" />
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
             android:ems="10"
-            android:inputType="textEmailAddress"
-            android:hint="example@gmail.com"/>
+            android:hint="@string/email_example"
+            android:importantForAutofill="no"
+            android:inputType="textEmailAddress" />
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/branch_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:entries="@array/branch_array"
+                android:spinnerMode="dropdown" />
+
+            <Spinner
+                android:id="@+id/year_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:entries="@array/year_array"
+                android:spinnerMode="dropdown" />
+
+            <Spinner
+                android:id="@+id/semseter_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:entries="@array/semester_array"
+                android:spinnerMode="dropdown" />
+        </LinearLayout>
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
             android:ems="10"
-            android:hint="Password"
+            android:hint="@string/password"
+            android:importantForAutofill="no"
             android:inputType="textWebPassword" />
 
-        <Spinner
-            android:id="@+id/branch_spinner"
+        <Button
+            android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:spinnerMode="dropdown" />
-        <Spinner
-            android:id="@+id/year_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:spinnerMode="dropdown"/>
-
-        <Spinner
-            android:id="@+id/semseter_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:spinnerMode="dropdown" />
-
-
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="30dp"
+            android:background="@color/buttoncolor"
+            android:gravity="center"
+            android:text="@string/button"
+            android:textAlignment="center"
+            android:layout_marginStart="150dp" />
 
 
     </LinearLayout>
