--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#F5F5DC</color>
     <color name="colorPrimaryDark">#1B1717</color>
     <color name="colorAccent">#4CAF74</color>
+    <color name="buttoncolor">#FFFCFC</color>
 </resources>
